--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@
   --color-white: #FFFFFF;
 
   --color-pink-600: #ED1E79;
+
+  --header-height: 82px;
 }
 
 body {
@@ -56,11 +58,20 @@ a {
   transform-origin: left;
 }
 
+.app-button {
+  all: unset;
+  padding: 28px;
+  border-radius: 9999px;
+  cursor: pointer;
+}
+
+.app-button.primary {}
+
 .header {
   background-color: rgba(255, 255, 255, 0.8);
   position: fixed;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateY(0) translateX(-50%);
   top: 20px;
   padding: 6px;
   border-radius: 9999px;
@@ -68,6 +79,11 @@ a {
   max-width: 1092px;
   width: 100%;
   box-shadow: 0px 6px 14px rgba(35, 84, 161, 0.11);
+  transition: transform 0.3s ease;
+}
+
+.header.hidden {
+  transform: translateY(-100%) translateX(-50%);
 }
 
 .header__container {
@@ -85,4 +101,50 @@ a {
   display: flex;
   align-items: center;
   gap: 24px;
+}
+
+/* Home Page */
+.home-main {}
+
+/* Hero Section */
+.home__hero-container {
+  padding-top: calc(var(--header-height) + 108px + 20px);
+  position: relative;
+  border-bottom: 1px solid rgba(235, 240, 239, 0.6);
+}
+
+.home__hero-container::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  pointer-events: none;
+  background: url("../assets/background-grid.png") no-repeat center;
+  background-size: cover;
+  z-index: -1;
+  opacity: 0.6;
+}
+
+.home__hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.hero__heading-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+}
+
+.hero__heading-wrapper span {
+  font-size: 1.5rem;
+}
+
+.hero__heading {
+  font-size: 3.625rem;
+  font-weight: 700;
+  font-family: 'Inter', sans-serif;
+  text-transform: uppercase;
 }
