feat: adiciona página do quiz

--- a/css/style.css
+++ b/css/style.css
@@ -225,6 +225,7 @@ a {
       transparent 0 100px,
       #c9c7cd22 100px 101px);
   padding: 112px 64px 54px;
+  margin-bottom: 20px;
 }
 
 /* Home Page */
