--- a/css/style.css
+++ b/css/style.css
@@ -271,39 +271,39 @@ a {
   font-weight: 700;
   font-family: 'Inter', sans-serif;
   text-transform: uppercase;
+  text-align: center;
 }
 
 /* Página "O que fazer?" */
 
 /* Cards */
 .cards {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   gap: 50px;
   margin: 80px auto 0 auto;
 }
 
 .card {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  width: 100%;
 }
 
-.card-body {  
+.card-body {
   padding: 1rem;
 }
 
 .card:hover {
-  transform: scale(1.05); 
+  transform: scale(1.05);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
 
 .card-img-top {
- width: 100%;
- height: 200px;
- object-fit: cover;
- border-radius: 6px 6px 0 0;
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 6px 6px 0 0;
 }
 
 /* Modal Cards */
@@ -315,10 +315,10 @@ a {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.75);
-  display: flex; 
+  display: flex;
   justify-content: center;
   align-items: center;
-  display: none; 
+  display: none;
   z-index: 1000;
   padding: 20px;
   box-sizing: border-box;
@@ -408,7 +408,7 @@ body.modal-aberto {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  
+
   background: rgba(233, 232, 232, 0.4);
   color: white;
   border: none;
@@ -421,7 +421,7 @@ body.modal-aberto {
   cursor: pointer;
   transition: background 0.2s ease;
   z-index: 10;
-  display: none; 
+  display: none;
 }
 
 .modal-arrow:hover {
@@ -437,8 +437,13 @@ body.modal-aberto {
 }
 
 @keyframes modal-fade-in {
-  from { opacity: 0; }
-  to { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes modal-scale-up {
@@ -446,6 +451,7 @@ body.modal-aberto {
     opacity: 0;
     transform: scale(0.9);
   }
+
   to {
     opacity: 1;
     transform: scale(1);
